# blurest

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml
blurest-core/: README.md  package.json
blurest-core/crates/blurest/: Cargo.toml
blurest-core/crates/blurest/src/: core.rs  lib.rs  models.rs  schema.rs
blurest-core/src/: index.cts  load.cts
blurest-wc/: .travis.yml  README.md  package.json  rollup.config.js  tsconfig.json
blurest-wc/docs/demo/: index.html
blurest-wc/src/: CustomElements.ts  blurhash.ts  cssTypedOM.d.ts  index.ts
crates/blurest/: Cargo.toml
crates/blurest/src/: core.rs  lib.rs  models.rs  schema.rs
markdown-it-blurest/: README.md  index.ts  package.json  tsconfig.types.json
markdown-it-demo/: README.md  index.ts  package.json
src/: index.cts  load.cts
