[package]
name = "blurest-core"
version = "0.1.0"
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
blurhash = "0.2.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
filetime = "0.2.25"
hex = "0.4.3"
image = "0.25.6"
libsqlite3-sys = { version = ">=0.17.2, <0.34.0", features = ["bundled"] }
log = "0.4.27"
neon = "1.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
